test-pod/test-pod-deploy-direct-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-pod-direct-nfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod-direct-nfs
  template:
    metadata:
      labels:
        app: test-pod-direct-nfs
    spec:
      securityContext:
        runAsUser: 2002
        runAsGroup: 2002
      containers:
      - name: test-pod
        image: quay.io/a13x22/toolbox-container:basic
        imagePullPolicy: Always
        workingDir: /tmp
        command: ["/bin/bash","-lc"]
        args:
        - |
          id
          echo "=== Testing /home directory access ==="
          ls -la /home
          echo "=== Testing individual directories ==="
          ls -la /home/userb
          ls -la /home/xyz
          echo "=== Testing file operations ==="
          echo $(date) hello from direct-nfs:$HOSTNAME >> /home/userb/hello.txt
          echo $(date) hello shared from direct-nfs:$HOSTNAME >> /home/xyz/hello.txt
          sleep infinity
        volumeMounts:
        - name: shared-home-home
          mountPath: /home
      serviceAccountName: test-pod
      volumes:
      - name: shared-home
        emptyDir: {}
      - name: shared-home-home
        emptyDir: {}
