test-pod/test-pod-deploy-usera-live-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-pod-usera-live-nfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod-usera-live-nfs
  template:
    metadata:
      labels:
        app: test-pod-usera-live-nfs
    spec:
      securityContext:
        runAsUser: 2001  # usera UID
        runAsGroup: 2001 # usera GID
        supplementalGroups: [2001, 1000770000] # Add NFS GID
      containers:
      - name: test-pod
        image: quay.io/a13x22/toolbox-container:basic
        imagePullPolicy: Always
        workingDir: /tmp
        command: ["/bin/bash","-lc"]
        args:
        - |
          [...]
        volumeMounts:
        - name: home-volume
          mountPath: /home
        - name: host-home
          mountPath: /mnt/home
          mountPropagation: HostToContainer
      serviceAccountName: selinux-fix-sa
      volumes:
      - name: host-home
        hostPath:
          path: /var/mnt/home
      - name: home-volume
        emptyDir: {}
