test-pod/test-pod-deploy-usera.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-pod-usera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod-usera
  template:
    metadata:
      labels:
        app: test-pod-usera
    spec:
      securityContext:
        runAsUser: 2001
        runAsGroup: 2001
      containers:
      - name: test-pod
        image: quay.io/a13x22/toolbox-container:basic
        imagePullPolicy: Always
        workingDir: /tmp
        command: ["/bin/bash","-lc"]
        args:
        - |
          id
          ls -la /home
          echo $(date) hello from usera:$HOSTNAME >> /home/usera/hello.txt
          echo $(date) hello shared from usera:$HOSTNAME >> /home/xyz/hello.txt
          sleep infinity
        volumeMounts:
        - name: host-home
          mountPath: /home
          mountPropagation: HostToContainer
        - name: automount-conf
          mountPath: /etc/auto.home
          subPath: auto.home
      serviceAccountName: test-pod
      volumes:
      - name: host-home
        hostPath:
          path: /var/mnt/home
      - name: automount-conf
        configMap:
          name: automount-conf-h6gk7hct9g
