test-pod/test-pod-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod
  template:
    metadata:
      labels:
        app: test-pod
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
      containers:
      - name: test-pod
        image: quay.io/a13x22/toolbox-container:basic
        imagePullPolicy: Always
        workingDir: /tmp
        volumeMounts:
        - name: init
          mountPath: /toolbox
        - name: host
          mountPath: /mnt
          # HostToContainer mount propagation is required
          mountPropagation: HostToContainer
        - name: host-home
          mountPath: /home
          mountPropagation: HostToContainer
      serviceAccountName: test-pod
      volumes:
      - name: init
        configMap:
          name: test-pod-init
      - name: host
        hostPath:
          path: /var/mnt
      - name: host-home
        hostPath:
          path: /var/mnt/home
